--- a/beating_the_bookie.ipynb
+++ b/beating_the_bookie.ipynb
@@ -45,7 +45,7 @@
         "\n",
         "### Summary \n",
         "\n",
-        "I set out to create a value betting algorithm for this project but the paper linked to above convinced me it would be a lesson in futility. Strategies based on team and player attributes are very unlikely to compete successfully with the models bookmakers' use when setting the odds. Aggregating many bookmakers' odds, however, can tell a bettor when an individual bookmaker is offering mispriced odds. Furthermore, a strategy that exploits these opportunities repeatedly can significantly outperform random betting in the long-term. In this notebook, I create such a model using soccer match data while following closely Kreiners's method closely.\n",
+        "I set out to create a value betting algorithm for this project but the paper linked to above convinced me it would be a lesson in futility. Strategies based on team and player attributes are very unlikely to compete successfully with the models bookmakers' use when setting the odds. Aggregating many bookmakers' odds, however, can tell a bettor when an individual bookmaker is offering mispriced odds. Furthermore, a strategy that exploits these opportunities repeatedly can significantly outperform random betting in the long-term. In this notebook, I create such a model using soccer match data while following Kaunitz's method closely.\n",
         "\n",
         "### Agenda\n",
         "\n",
@@ -76,7 +76,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -117,7 +117,7 @@
         "plt.rcParams['figure.figsize'] = (10, 5)\n",
         "plt.style.use('fivethirtyeight')"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -147,7 +147,7 @@
         "PATH = '/content/drive/MyDrive/Colab Notebooks/data/'\n",
         "close = pd.read_csv(PATH + 'closing_odds.csv', index_col=0)"
       ],
-      "execution_count": 135,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -232,7 +232,7 @@
       "source": [
         "close.info()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -288,7 +288,7 @@
       "source": [
         "close.head(3)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -463,7 +463,7 @@
         "plt.xticks(rotation=90)\n",
         "plt.show()"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -508,7 +508,7 @@
         "close['avg_prob_away_win'] = np.floor((1/close['avg_odds_away_win'])*bins)/bins\n",
         "close['avg_prob_draw'] = np.floor((1/close['avg_odds_draw'])*bins)/bins"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -551,7 +551,7 @@
         "    print(f'   mean: {round(close[odds].mean(),2)}')\n",
         "    print(f'   st. dev.: {round(close[odds].std(),2)}')"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -657,7 +657,7 @@
         "close = close.drop(columns=['avg_prob_home_win','avg_prob_away_win',\n",
         "                            'avg_prob_draw','home_win','away_win','draw'])"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -690,7 +690,7 @@
         "plt.savefig(PATH + 'cons_prob.png')\n",
         "plt.show()"
       ],
-      "execution_count": 136,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -757,7 +757,7 @@
         "print(f'  Slope: {lr_draw.coef_[0]}')\n",
         "print(f'  Intercept: {lr_draw.intercept_}')"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -845,7 +845,7 @@
         "min_odds = 4 #minimum bookmakers offering odds\n",
         "bet = 50 #bet size for every bet"
       ],
-      "execution_count": 107,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -896,7 +896,7 @@
         "#validation check\n",
         "sum(close.bet_result>0) == sum(max_exp_payout>0)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -924,7 +924,7 @@
         "\n",
         "close['max_odds'] = max_odds"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -947,7 +947,7 @@
         "             \n",
         "bet_df.head()"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1074,7 +1074,7 @@
         "print(f'Matches bet on: {n_bets} ({round(n_bets/len(close)*100,1)} percent)')\n",
         "print(f'Accuracy of bets: {mdl_accuracy}')\n"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1100,7 +1100,7 @@
         "mdl_profit = bet_df.cumulative.iloc[-1]\n",
         "f'Profit of {mdl_profit} dollars generated on historical data.'"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1159,7 +1159,7 @@
         "\n",
         "prior_home, prior_away, prior_draw"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1218,7 +1218,7 @@
         "print(f'Mean betting accuracy {bl_accuracy} and variance {round(accuracy.var(),4)}')\n",
         "accuracy"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1262,7 +1262,7 @@
         "bl_profit = samp.cumulative.iloc[-1]\n",
         "f'Loss of {-bl_profit} dollars on historical data.'"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1296,7 +1296,7 @@
         "                       index=['mispriced odds model',\n",
         "                              'random model using priors (baseline)', 'difference'])"
       ],
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1328,7 +1328,7 @@
       "source": [
         "results"
       ],
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1443,7 +1443,7 @@
         "plt.savefig(PATH + 'two_bettors.png')\n",
         "plt.show()"
       ],
-      "execution_count": 138,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1477,7 +1477,7 @@
         "plt.legend(['mispriced odds model','random betting model'])\n",
         "plt.show()\n"
       ],
-      "execution_count": 133,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1505,7 +1505,7 @@
         "res = scs.ttest_ind(bet_df.gain, samp.gain, equal_var=False)\n",
         "print(f'p-value: {res[1]} (probability of attaining these results randomly)')"
       ],
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
